--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "build": "cd ../Client && npm install && npm run build"
+    "build": "cd /Client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
