--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/FearTheBeard95/weather-app/issues"
   },
-  "homepage": "https://github.com/FearTheBeard95/weather-app#readme",
+  "homepage": "./",
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
     "chalk": "^4.1.0",
